--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
           <!-- Apple Support Contact Card Overlay -->
           <div class="apple-support-header poster-overlay">
             <div class="support-content">
-              <span class="support-text">Apple Support +1-888-712-9084</span>
+              <span class="support-text">Apple Support 1 (877) 957-1677</span>
               <div class="dropdown-arrow">
                 <i class="fas fa-chevron-down"></i>
               </div>
@@ -97,11 +97,11 @@
             Your Apple ID was recently used at APPLE STORE for $149.99 Via Apple
             Pay Pre-Authorization! We have placed those request on hold to ensure
             safest and Security.Not you? Immediately call Apple Support
-            <b><a href="tel:+1-888-712-9084">+1 (888) 712-9084</a></b> to Freeze it!.
+            <b><a href="tel:1 (877) 957-1677">1 (877) 957-1677</a></b> to Freeze it!.
           </p>
           <div class="modal-buttons">
-            <button class="cancel"><a href="tel:+1-888-712-9084">Cancel</a></button>
-            <button class="ok"><a href="tel:+1-888-712-9084">OK</a></button>
+            <button class="cancel"><a href="tel:1 (877) 957-1677">Cancel</a></button>
+            <button class="ok"><a href="tel:1 (877) 957-1677">OK</a></button>
           </div>
         </div>
       </div>
